--- a/index1.html
+++ b/index1.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Personal Website</title>
+		<title>Site Personnel</title>
 		<meta charset="utf-8">
 		<!--Import Google Icon Font-->
 		<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -18,10 +18,8 @@
 			<div class="header-bg"></div>
 			<nav class="nav-wraper white">
 				<div class="container">
-					<a href="#" class="brand-logo grey-text text-darken-3">Louis</a>
 					<a data-target="sidenav" class="sidenav-trigger grey-text text-darken-3"><i class="material-icons">menu</i></a>
 					<ul id="nav-mobile" class="right hide-on-med-and-down">
-						<li><a class="grey-text text-darken-3" href="#about">A Propos</a></li>
 						<li><a class="grey-text text-darken-3" href="#school">Etudes</a></li>
 						<li ><a class="grey-text text-darken-3" href="#skills">Compétences</a></li>
 						<li><a class="grey-text text-darken-3" href="#projects">Projets</a></li>
@@ -57,10 +55,10 @@
 											<a target="_blank" href="https://www.facebook.com/louis.prybys.7" class="pure-button button-socicon"><span class="socicon socicon-facebook grey-text text-darken-1"></span></a>
 										</li>
 										<li>
-											<a target="_blank" href="https://www.instagram.com/louisprybys/?hl=fr" class="pure-button button-socicon"><span class="socicon socicon-linkedin grey-text text-darken-1"></span></a>
+											<a target="_blank" href="https://www.linkedin.com/in/louis-prybys-404544171/" class="pure-button button-socicon"><span class="socicon socicon-linkedin grey-text text-darken-1"></span></a>
 										</li>
 										<li>
-											<a target="_blank" href="https://www.linkedin.com/in/louis-prybys-404544171/" class="pure-button button-socicon"><span class="socicon socicon-instagram grey-text text-darken-1"></span></a>
+											<a target="_blank" href="https://www.instagram.com/louisprybys/?hl=fr" class="pure-button button-socicon"><span class="socicon socicon-instagram grey-text text-darken-1"></span></a>
 										</li>
 									</ul>
 								</div>
@@ -70,12 +68,12 @@
 										Etudiant au DUT informatique à Montpellier
 									</p>
 									<div class="student">
-										<a class="waves-effect waves-light btn green accent-4" href="./docs/CV.pdf" target="_blank" download id="CV">TELECHARGER LE CV</a>
+										<a class="waves-effect waves-light btn green accent-4" href="./docs/CVLouisPrybys.pdf" target="_blank" download id="CV">TELECHARGER LE CV</a>
 									</div>
 									<ul class="student">
 										<li>
 											<span class="profile-title">Age</span>
-											<span class="profile-desc">18</span>
+											<span class="profile-desc">19</span>
 										</li>
 										<li>
 											<span class="profile-title">Adresse</span>
@@ -86,7 +84,7 @@
 											<span class="profile-desc">prybyslouis@gmail.com</span>
 										</li>
 										<li>
-											<span class="profile-title">téléphone</span>
+											<span class="profile-title">Téléphone</span>
 											<span class="profile-desc">0783449401</span>
 										</li>
 									</ul>
@@ -161,19 +159,19 @@
 								<div class="determinate blue darken-1" style="width: 85%"></div>
 							</div>
 							<div>
-								HTML
-							</div>
-							<div class="progress grey lighten-2">
-								<div class="determinate blue darken-1" style="width: 80%"></div>
-							</div>
-							<div>
-								CSS
+								HTML/CSS/PHP
 							</div>
 							<div class="progress grey lighten-2">
 								<div class="determinate blue darken-1" style="width: 80%"></div>
 							</div>
 							<div>
 								Java
+							</div>
+							<div class="progress grey lighten-2">
+								<div class="determinate blue darken-1" style="width: 80%"></div>
+							</div>
+							<div>
+								Méthodes agiles
 							</div>
 							<div class="progress grey lighten-2">
 								<div class="determinate blue darken-1" style="width: 70%"></div>
@@ -219,19 +217,56 @@
 			<div class="col l4 m6 s12">
 				<img class="responsive-img " src="./image/code.jpg" alt="Image projects" onclick="toggle_text('span_txt');">
 				<br />
-				<span id="span_txt" style="display: none;">Code : j'ai réalisé avec mon équipe un site à l'aide du cms joomla.<a target="_blank" href="https://iut-info-projet.cloudaccess.host/index.php">Notre site</a></span>
+				<span id="span_txt" style="display: none;">Code : j'ai réalisé avec mon équipe un site à l'aide du cms joomla.<a target="_blank" href="https://iut-info-projet.cloudaccess.host/index.php"> Notre site</a></span>
 			</div>
 			<div class="col l4 m6 s12">
 				<img class="responsive-img" src="./image/game.jpg" alt="Image projects" onclick="toggle_text1('span_txt1');">
 				<br />
-				<span id="span_txt1" style="display: none;">Game :Dans le cadre du DUT nous avons conçu un jeu de société entièrement en java.</span>
+				<span id="span_txt1" style="display: none;">Game :Dans le cadre du DUT nous avons conçu un jeu de société entièrement en java.<a target="_blank" href="https://dominion.zanapher.fr/login?next=%2Findex"> Jouer</a></span>
 			</div>
 			<div class="col l4 m6 s12">
 				<img class="responsive-img jam" src="./image/jam.jpg" alt="Image projects" onclick="toggle_text2('span_txt2');">
 				<br />
-				<span id="span_txt2" style="display: none;">Jam :J'ai participé à la conception d'un jeu vidéo en groupe de 5. Le concours durait 30 heures d'affilés et cela m'a permit de repousser mes limites à la fois physiques et intellectuel.<a href="./amarok/amarok.html">Jouer</a></span>
+				<span id="span_txt2" style="display: none;">Jam :J'ai participé à la conception d'un jeu vidéo en groupe de 5.<a target="_blank" href="./amarok/amarok.html"> Jouer</a></span>
 			</div>
 		</div>
+		<div class="wrapper container">
+		<ul class="collapsible">
+					<li>
+						<div class="collapsible-header">
+							Notre site de l'IUT
+							<i class="fleche material-icons">work</i>
+						</div>
+						<div class="collapsible-body">
+							<span>Dans le carde de la gestion de projet, nous avons réalisé ce projet en groupe de 6. La prise en main du logiciel utilisé était compliqué mais j'ai tout de même réussi à créer et paramétrer un forum entier. Le projet s'est étendu sur environ 2 mois et j'ai été impliqué dans ce projet intéressant durant une dizaines d'heures.<br>
+								<br>
+							Vous pouvez retrouvé notre site en cliquant sur la première image.</span>
+						</div>
+					</li>
+					<li>
+						<div class="collapsible-header">
+							Notre jeu Dominion
+							<i class=" fleche material-icons">work</i>
+						</div>
+						<div class="collapsible-body">
+							<span>En programmation nous avons effectué un jeu de société entièrement codé en java. Celui-ci a duré environ 1 mois, nous étions 4 à travailler sur le projet. J'ai plus précisémment été impliqué dans le code des différentes cartes permettant d'élaborer des stratégies particulières. <br>
+								<br>
+								Vous pouvez jouer à ce jeu en cliquant sur la deuxième image.</span>
+						</div>
+					</li>
+					<li>
+						<div class="collapsible-header">
+							Notre Jeu Amarok
+							<i class="fleche material-icons">work</i>
+						</div>
+						<div class="collapsible-body">
+							<span>A but lucratif et compétitif, j'ai participé à la création d'un jeu vidéo. En effet, nous avions 30 heures pour réaliser un jeu sur le thème de la forêt. Mon travail effectué était accès sur la réalisation des différents maps. J'ai aussi aider à écrire le code permettant de faire marcher le personnage. <br>
+								<br>
+								Vous pouvez jouer à notre jeu en cliquant sur la troisième image.</span>
+						</div>
+					</li>
+				</ul>
+			</div>
 		<div class="wrapper container">
 			<div class="interests">
 				<h3 id="interests" class="scrollspy">Interêts</h3>
@@ -369,10 +404,10 @@
 									<a target="_blank" href="https://www.facebook.com/louis.prybys.7" class="pure-button button-socicon"><span class="socicon socicon-facebook white-text text-darken-1"></span></a>
 								</li>
 								<li>
-									<a target="_blank" href="https://www.instagram.com/louisprybys/?hl=fr" class="pure-button button-socicon"><span class="socicon socicon-linkedin white-text text-darken-1"></span></a>
+									<a target="_blank" href="https://www.linkedin.com/in/louis-prybys-404544171/" class="pure-button button-socicon"><span class="socicon socicon-linkedin white-text text-darken-1"></span></a>
 								</li>
 								<li>
-									<a target="_blank" href="https://www.linkedin.com/in/louis-prybys-404544171/" class="pure-button button-socicon"><span class="socicon socicon-instagram white-text text-darken-1"></span></a>
+									<a target="_blank" href="https://www.instagram.com/louisprybys/?hl=fr" class="pure-button button-socicon"><span class="socicon socicon-instagram white-text text-darken-1"></span></a>
 								</li>
 							</ul>
 						</div>
