--- a/index.html
+++ b/index.html
@@ -18,10 +18,9 @@
 			<div class="header-bg"></div>
 			<nav class="nav-wraper white">
 				<div class="container">
-					<a href="#" class="brand-logo grey-text text-darken-3">Louis</a>
+					
 					<a data-target="sidenav" class="sidenav-trigger grey-text text-darken-3"><i class="material-icons">menu</i></a>
 					<ul id="nav-mobile" class="right hide-on-med-and-down">
-						<li><a class="grey-text text-darken-3" href="#about">About</a></li>
 						<li><a class="grey-text text-darken-3" href="#school">School</a></li>
 						<li ><a class="grey-text text-darken-3" href="#skills">Skills</a></li>
 						<li><a class="grey-text text-darken-3" href="#projects">Projects</a></li>
@@ -57,10 +56,10 @@
 											<a target="_blank" href="https://www.facebook.com/louis.prybys.7" class="pure-button button-socicon"><span class="socicon socicon-facebook grey-text text-darken-1"></span></a>
 										</li>
 										<li>
-											<a target="_blank" href="https://www.instagram.com/louisprybys/?hl=fr" class="pure-button button-socicon"><span class="socicon socicon-linkedin grey-text text-darken-1"></span></a>
+											<a target="_blank" href="https://www.linkedin.com/in/louis-prybys-404544171/" class="pure-button button-socicon"><span class="socicon socicon-linkedin grey-text text-darken-1"></span></a>
 										</li>
 										<li>
-											<a target="_blank" href="https://www.linkedin.com/in/louis-prybys-404544171/" class="pure-button button-socicon"><span class="socicon socicon-instagram grey-text text-darken-1"></span></a>
+											<a target="_blank" href="https://www.instagram.com/louisprybys/?hl=fr" class="pure-button button-socicon"><span class="socicon socicon-instagram grey-text text-darken-1"></span></a>
 										</li>
 									</ul>
 								</div>
@@ -70,12 +69,12 @@
 										Student at the Montpellier informatic Institute
 									</p>
 									<div class="student">
-										<a class="waves-effect waves-light btn green accent-4" href="./docs/CV.pdf" target="_blank" download id="CV">DOWNLOAD CV</a>
+										<a class="waves-effect waves-light btn green accent-4" href="./docs/CVLouisPrybys.pdf" target="_blank" download id="CV">DOWNLOAD CV</a>
 									</div>
 									<ul class="student">
 										<li>
 											<span class="profile-title">Age</span>
-											<span class="profile-desc">18</span>
+											<span class="profile-desc">19</span>
 										</li>
 										<li>
 											<span class="profile-title">Adress</span>
@@ -161,19 +160,19 @@
 								<div class="determinate blue darken-1" style="width: 85%"></div>
 							</div>
 							<div>
-								HTML
-							</div>
-							<div class="progress grey lighten-2">
-								<div class="determinate blue darken-1" style="width: 80%"></div>
-							</div>
-							<div>
-								CSS
+								HTML/CSS/PHP
 							</div>
 							<div class="progress grey lighten-2">
 								<div class="determinate blue darken-1" style="width: 80%"></div>
 							</div>
 							<div>
 								Java
+							</div>
+							<div class="progress grey lighten-2">
+								<div class="determinate blue darken-1" style="width: 80%"></div>
+							</div>
+							<div>
+								Agile methods
 							</div>
 							<div class="progress grey lighten-2">
 								<div class="determinate blue darken-1" style="width: 70%"></div>
@@ -219,19 +218,57 @@
 			<div class="col l4 m12 s12">
 				<img class="responsive-img " src="./image/code.jpg" alt="Image projects" onclick="toggle_text('span_txt');">
 				<br />
-				<span id="span_txt" style="display: none;">Code : I created a site with my team using cms joomla. <a target="_blank" href="https://iut-info-projet.cloudaccess.host/index.php">Our website</a></span>
+				<span id="span_txt" style="display: none;">Code : I created a site with my team using cms joomla. <a target="_blank" href="https://iut-info-projet.cloudaccess.host/index.php"> Our website</a></span>
 			</div>
 			<div class="col l4 m12 s12">
 				<img class="responsive-img " src="./image/game.jpg" alt="Image projects" onclick="toggle_text1('span_txt1');">
 				<br />
-				<span id="span_txt1" style="display: none;">Game : As part of the DUT we designed a board game entirely in java.</span>
+				<span id="span_txt1" style="display: none;">Game : As part of the DUT we designed a board game entirely in java.<a target="_blank" href="https://dominion.zanapher.fr/login?next=%2Findex"> Play Game</a></span>
 			</div>
 			<div class="col l4 m12 s12">
 				<img class="responsive-img jam" src="./image/jam.jpg" alt="Image projects" onclick="toggle_text2('span_txt2');">
 				<br />
-				<span id="span_txt2" style="display: none;">Jam : I participated in the design of a video game in a group of 5. The contest lasted 30 hours in a row and this allowed me to push my limits both physically and intellectually.<a href="./amarok/amarok.html">Play game</a></span>
+				<span id="span_txt2" style="display: none;">Jam : I participated in the design of a video game in a group of 5.<a target="_blank" href="./amarok/amarok.html"> Play game</a></span>
 			</div>
 		</div>
+
+				<div class="wrapper container">
+		<ul class="collapsible">
+					<li>
+						<div class="collapsible-header">
+							Our website
+							<i class="fleche material-icons">work</i>
+						</div>
+						<div class="collapsible-body">
+							<span>In project management, we carried out this project in a group of 6. Taking control of the software used was complicated but I managed to create and configure an entire forum. The project lasted about 2 months and I was involved in this interesting project for about 10 hours.<br>
+								<br>
+							You can play our game by clicking on the first image.</span>
+						</div>
+					</li>
+					<li>
+						<div class="collapsible-header">
+							Our Dominion's game
+							<i class=" fleche material-icons">work</i>
+						</div>
+						<div class="collapsible-body">
+							<span>In programming we performed a fully java-coded board game. This one lasted about 1 month, there were 4 of us working on the project. More specifically, I was involved in the code of the various cards used to develop specific strategies.<br>
+								<br>
+								You can play our game by clicking on the second image.</span>
+						</div>
+					</li>
+					<li>
+						<div class="collapsible-header">
+							Our Amarok's game
+							<i class="fleche material-icons">work</i>
+						</div>
+						<div class="collapsible-body">
+							<span>For profit and competitive, I participated in the creation of a video game. In fact, we had 30 hours to make a game on the theme of the forest. My work carried out was access to the realization of the different maps. I also helped to write the code to make the character work. <br>
+								<br>
+								You can play our game by clicking on the third image.</span>
+						</div>
+					</li>
+				</ul>
+			</div>
 		<div class="wrapper container">
 			<div class="interests">
 				<h3 id="interests" class="scrollspy">Interests</h3>
@@ -315,8 +352,8 @@
 			<div class="parallax">
 				<img alt="Image parallax" src="./image/artifi.jpg">
 			</div>
+			<h2 id="personnality">Personnality</h2>
 			<div class="positionnuage">
-				<h2 id="personnality">Personnality</h2>
 				<img class="materialboxed" alt="Image de mon nuage de mots" src="./image/cloud.png">
 			</div>
 		</div>
@@ -369,10 +406,10 @@
 									<a target="_blank" href="https://www.facebook.com/louis.prybys.7" class="pure-button button-socicon"><span class="socicon socicon-facebook white-text text-darken-1"></span></a>
 								</li>
 								<li>
-									<a target="_blank" href="https://www.instagram.com/louisprybys/?hl=fr" class="pure-button button-socicon"><span class="socicon socicon-linkedin white-text text-darken-1"></span></a>
+									<a target="_blank" href="https://www.linkedin.com/in/louis-prybys-404544171/" class="pure-button button-socicon"><span class="socicon socicon-linkedin white-text text-darken-1"></span></a>
 								</li>
 								<li>
-									<a target="_blank" href="https://www.linkedin.com/in/louis-prybys-404544171/" class="pure-button button-socicon"><span class="socicon socicon-instagram white-text text-darken-1"></span></a>
+									<a target="_blank" href="https://www.instagram.com/louisprybys/?hl=fr" class="pure-button button-socicon"><span class="socicon socicon-instagram white-text text-darken-1"></span></a>
 								</li>
 							</ul>
 						</div>
