--- a/index.html
+++ b/index.html
@@ -127,11 +127,11 @@
 					</li>
 					<li>
 						<div class="collapsible-header">
-							Next studies envisaged
+							Engineering schools envisaged
 							<i class="fleche material-icons">arrow_downward</i>
 						</div>
 						<div class="collapsible-body">
-							<span>Engineering schools like (Ecole des Mines or Polytech).</span>
+							<span>Ecole des Mines d'Alès (eligible, looking for a work-study).</span>
 						</div>
 					</li>
 				</ul>
@@ -160,7 +160,7 @@
 								<div class="determinate blue darken-1" style="width: 85%"></div>
 							</div>
 							<div>
-								HTML/CSS/PHP
+								HTML/CSS/PHP/JS
 							</div>
 							<div class="progress grey lighten-2">
 								<div class="determinate blue darken-1" style="width: 80%"></div>
@@ -200,7 +200,7 @@
 								English
 							</div>
 							<div class="progress grey lighten-2">
-								<div class="determinate indigo darken-1" style="width: 60%"></div>
+								<div class="determinate indigo darken-1" style="width: 70%"></div>
 							</div>
 							<div>
 								Spanish
