--- a/index1.html
+++ b/index1.html
@@ -126,11 +126,11 @@
 					</li>
 					<li>
 						<div class="collapsible-header">
-							Prochaines études envisagées
+							Ecoles d'ingénieurs envisagées
 							<i class="fleche material-icons">arrow_downward</i>
 						</div>
 						<div class="collapsible-body">
-							<span>Ecoles d'ingénieurs (Ecole des Mines ou Polytech).</span>
+							<span>Ecole des Mines d'Alès (admissible, en recherche d'alternance) .</span>
 						</div>
 					</li>
 				</ul>
@@ -159,7 +159,7 @@
 								<div class="determinate blue darken-1" style="width: 85%"></div>
 							</div>
 							<div>
-								HTML/CSS/PHP
+								HTML/CSS/PHP/JS
 							</div>
 							<div class="progress grey lighten-2">
 								<div class="determinate blue darken-1" style="width: 80%"></div>
@@ -199,7 +199,7 @@
 								English
 							</div>
 							<div class="progress grey lighten-2">
-								<div class="determinate indigo darken-1" style="width: 60%"></div>
+								<div class="determinate indigo darken-1" style="width: 70%"></div>
 							</div>
 							<div>
 								Espagnol
